--- a/about.html
+++ b/about.html
@@ -7,5 +7,5 @@ page_name: about
 
 
 <p>My name is Anqing Li,live in Shenzhen,China.</p>
-<p>My Email:anqing-lianqing|at|163.com</p>
+<p>My Email:anqing_li|at|163.com</p>
 
