--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@ layout: default
 title: I think
 ---
 
-
-<a href="">English Blog</a>
+<a href="">Project</a>
+|
+<a href="">Opencv</a>
+|
+<a href="">Thoughts</a>
 |
 <a href='/about.html'>About</a>
-|
+
 
 
 
