--- a/project.html
+++ b/project.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: About
-page_name: about
+title: Tracffic Monitoring
+page_name: Tracffic Monitoring
 ---
  
 
 
 <p>This is a very effect tool when recording mass network traffic data</p>
-<img src="/images/TM.jpg" />
+<img src="/images/TM.jpg" align="left"/>
 <p>Due to the Teechart copyright issue,please contact me if you need the tool with moving chart</p>
-<img src="/images/TM2.jpg" />
+<img src="/images/TM2.jpg" align="left"/>
 
