--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@ page_name: Tracffic Monitoring
  
 
 
-<p>This is a very effect tool when recording mass network traffic data</p>
+<p>This is a very effective tool when recording mass network traffic data</p>
 <img src="/images/TM.jpg" />
 <p>Due to the Teechart copyright issue,please contact me if you need the tool with moving chart</p>
 <img src="/images/TM2.jpg" />
