--- a/project.html
+++ b/project.html
@@ -12,4 +12,4 @@ page_name: Tracffic Monitoring
 <img src="/images/TM2.jpg" />
 
 
-<p><a href="https://github.com/will2017/Traffic_Monitoring">Git</a></p>
+<p><a href="https://github.com/will2017/Traffic_Monitoring">Code Link</a></p>
