--- a/project.html
+++ b/project.html
@@ -13,4 +13,4 @@ page_name: Tracffic Monitoring
 
 
 <p><a href="https://github.com/will2017/Traffic_Monitoring">Code Link</a></p>
-<p><a href="files/TMG_ENG.rar">Demo Link</a></p>
+<p><a href="/files/TMG_ENG.rar">Demo Link</a></p>
