--- a/project.html
+++ b/project.html
@@ -1,16 +1,10 @@
 ---
 layout: default
-title: Tracffic Monitoring
-page_name: Tracffic Monitoring
+title: Project
+page_name: Project
 ---
  
 
 
-<p>This is a very effective tool when recording mass network traffic data</p>
-<img src="/images/TM.jpg" />
-<p>Due to the Teechart copyright issue,please contact me if you need the tool with moving chart</p>
-<img src="/images/TM2.jpg" />
+<p><a href="/project/TM.html">Traffic Monitoring</a></p>
 
-
-<p><a href="https://github.com/will2017/Traffic_Monitoring">Code Link</a></p>
-<p><a href="/files/TM_ENG.rar">Demo Link</a></p>
